[Editorial] Modernize several hyphenated words

--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -159,7 +159,7 @@
 			<p>“Eventually⁠—why not now?” murmured his lordship. “Thanks frightfully. Man of peace myself, you know⁠—hate unpleasantness and all that.” He scrutinised his booty carefully, running the stones expertly between his fingers. Over the portrait he pursed up his lips. “Yes,” he murmured, “that <em>would</em> have made a row.” He replaced the wrapping and slipped the parcel into his pocket.</p>
 			<p>“Well, good night, Melville⁠—and thanks for a pleasant game.”</p>
 			<hr/>
-			<p>“I say, Biggs,” said Wimsey, when he had returned to the card-room. “You’ve had a lot of experience. What tactics d’you think one’s justified in usin’ with a blackmailer?”</p>
+			<p>“I say, Biggs,” said Wimsey, when he had returned to the cardroom. “You’ve had a lot of experience. What tactics d’you think one’s justified in usin’ with a blackmailer?”</p>
 			<p>“Ah!” said the <abbr class="eoc" epub:type="z3998:initialism">K.C.</abbr> “There you’ve put your finger on Society’s sore place, where the Law is helpless. Speaking as a man, I’d say nothing could be too bad for the brute. It’s a crime crueller and infinitely worse in its results than murder. As a lawyer, I can only say that I have consistently refused to defend a blackmailer or to prosecute any poor devil who does away with his tormentor.”</p>
 			<p>“H’m,” replied Wimsey. “What do you say, Colonel?”</p>
 			<p>“A man like that’s a filthy pest,” said the little warrior stoutly. “Shootin’s too good for him. I knew a man⁠—close personal friend, in fact⁠—hounded to death⁠—blew his brains out⁠—one of the best. Don’t like to talk about it.”</p>
