Add 'role="presentation"' to headers and footers in blockquotes

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -77,7 +77,7 @@
 				<p>I am not, however, unmindful of the fact that your mother is my sister, and you and she my only surviving relatives. I shall accordingly amuse myself by drawing up today a second will, superseding the other and leaving the money to you.</p>
 				<p>I have always held that woman is a frivolous animal. A woman who pretends to be serious is wasting her time and spoiling her appearance. I consider that you have wasted your time to a really shocking extent. Accordingly, I intend to conceal this will, and that in such a manner that you will certainly never find it unless by the exercise of a sustained frivolity.</p>
 				<p>I hope you will contrive to be frivolous enough to become the heiress of your affectionate</p>
-				<footer>
+				<footer role="presentation">
 					<p epub:type="z3998:sender z3998:signature">Uncle Meleager.</p>
 				</footer>
 			</blockquote>
