Remove italics on song title

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -15,7 +15,7 @@
 			<p>“I beg your lordship’s pardon. T-w-o. And seven letters.”</p>
 			<p>“Nonsense!” said Lord Peter. “How about that bath?”</p>
 			<p>“It should be just about ready, my lord.”</p>
-			<p>Lord Peter Wimsey swung his mauve silk legs lightly over the edge of the bed and stretched appreciatively. It was a beautiful June that year. Through the open door he saw the delicate coils of steam wreathing across a shaft of yellow sunlight. Every step he took into the bathroom was a conscious act of enjoyment. In a husky light tenor he carolled a few bars of “<span epub:type="se:name.music.song"><i xml:lang="fr">Maman, dîtes-moi</i></span>.” Then a thought struck him, and he turned back.</p>
+			<p>Lord Peter Wimsey swung his mauve silk legs lightly over the edge of the bed and stretched appreciatively. It was a beautiful June that year. Through the open door he saw the delicate coils of steam wreathing across a shaft of yellow sunlight. Every step he took into the bathroom was a conscious act of enjoyment. In a husky light tenor he carolled a few bars of “<span epub:type="se:name.music.song" xml:lang="fr">Maman, dîtes-moi</span>.” Then a thought struck him, and he turned back.</p>
 			<p>“Bunter!”</p>
 			<p>“My lord?”</p>
 			<p>“No bacon this morning. Quite the wrong smell.”</p>
